main/default/objects/Assignment_Group_Member__c/fields/Out_Of_Office__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office__c</fullName>
    <description>Formula Field to determine if the Group member is currently active to recieve assignments</description>
    <formula>IF( Out_Of_Office_Start__c  &lt;=  NOW()  &amp;&amp;  NOW()  &lt;=  Out_Of_Office_End__c , False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field to determine if the Group member is currently active to recieve assignments</inlineHelpText>
    <label>Out Of Office</label>
    <type>Checkbox</type>
</CustomField>