main/default/objects/Assignment_Group_Member__c/fields/Out_Of_Office_Start__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office_Start__c</fullName>
    <label>Out Of Office Start</label>
    <type>DateTime</type>
</CustomField>